--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <script type="text/javascript" src="./sketch.js"></script>
     <script type="text/javascript" src="./Ball.js"></script>
     <script type="text/javascript" src="./Ledge.js"></script>
+    <script type="text/javascript" src="./Libraries/Matrix.js"></script>
+    <script type="text/javascript" src="./Libraries/nn.js"></script>
 <head>
 <html>
