--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <script type="text/javascript" src="./Ledge.js"></script>
     <script type="text/javascript" src="./Libraries/Matrix.js"></script>
     <script type="text/javascript" src="./Libraries/nn.js"></script>
+    <script type="text/javascript" src="./ga.js"></script>
 <head>
 <html>
